--- a/package.json
+++ b/package.json
@@ -3,28 +3,35 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^2.9.10",
         "@reduxjs/toolkit": "^1.8.6",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
+        "react-animate-height": "^3.0.4",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.38.0",
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "swiper": "^8.4.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@tailwindcss/line-clamp": "^0.4.2",
         "autoprefixer": "^10.4.12",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "customize-cra": "^1.0.0",
         "postcss": "^8.4.18",
+        "react-app-rewired": "^2.2.1",
         "tailwindcss": "^3.1.8"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
