--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "swiper": "^8.4.4",
+        "tailwind-merge": "^1.7.0",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
     },
