--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "customize-cra": "^1.0.0",
         "postcss": "^8.4.18",
         "react-app-rewired": "^2.2.1",
-        "tailwindcss": "^3.1.8"
+        "tailwindcss": "^3.1.8",
+        "tailwindcss-aria-attributes": "^1.3.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
